--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,10 @@
                         <include>**/*Tests.java</include>
                         <include>**/*TestCase.java</include>
                     </includes>
+                    <!--<properties>-->
+                        <!--&lt;!&ndash;<excludeTags>Priority1</excludeTags>&ndash;&gt;-->
+                        <!--&lt;!&ndash;<includeTags>Priority1</includeTags>&ndash;&gt;-->
+                    <!--</properties>-->
                 </configuration>
                 <dependencies>
                     <dependency>
